Actions
Bug #11985
closedlibfakekernel: cast between incompatible function types
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with gcc 8:
../common/callout.c: In function 'timeout': ../common/callout.c:49:30: error: cast between incompatible function types from 'void (*)(void *)' to 'void (*)(union sigval)' [-Werror=cast-function-type] sev.sigev_notify_function = (sigev_notify_func_t)func; ^ ../common/thread.c:73:13: error: cast between incompatible function types from 'void (*)()' to 'void * (*)(void *)' [-Werror=cast-function-type] thr_func = (void *(*)(void *))func; ^ cc1: all warnings being treated as errors
Updated by Electric Monk about 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 0cad6fe6a45fed29aa5c115fda1fc16385145fce
commit 0cad6fe6a45fed29aa5c115fda1fc16385145fce Author: Toomas Soome <tsoome@me.com> Date: 2020-02-24T19:04:50.000Z 11985 libfakekernel: cast between incompatible function types Reviewed by: John Levon <john.levon@joyent.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions